# business-card-extractor

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  PROJECT_REORGANIZATION_SUMMARY.md  PYTHON_PACKAGES_EXPLANATION.md  README.md  app.py  classify.py  database.py  debug_connection.py  deploy.bat  deploy.sh  deployment_test.py  main.py  packages.txt  pyproject.toml  requirements.txt  requirements_conservative.txt  requirements_minimal.txt  runtime.txt  sample_contacts.csv  setup.bat  setup_venv.py  test_installation.py  test_packages.py
deployment/: run.bat
docs/: DEPLOYMENT.md  PYTHON_313_COMPATIBILITY.md  REQUIREMENTS_GUIDE.md
src/: app.py
src/config/: __init__.py  config.py  setup.sql
src/core/: __init__.py  database.py  ocr.py  preprocess.py
src/utils/: __init__.py  styles.py
